--- a/素材/yaki.css
+++ b/素材/yaki.css
@@ -1,5 +1,7 @@
 .title{
-    font-size:1000%;
+    padding:0;
+    font-size:10vw;
+    width:100vw;
     position:relative;
     z-index: 1;
     color:white;
